update kyc request outpu
