# routes/routes.go
@@ -13,16 +13,14 @@ func RegisterClientRoutes(router *gin.Engine, clientController *controllers.Clie
 	{
 		clientRoutes.Use(middleware.JWTMiddleware()) // Protect with JWT
 		clientRoutes.GET("/new", clientController.GetNewClientsByRange)
-		clientRoutes.GET("/kyc", clientController.GetKYCClientsByRange)
-
 	}
 }
 
 // RegisterKYCRequestRoutes registers the routes for KYC requests
 func RegisterKYCRequestRoutes(router *gin.Engine, kycRequestController *controllers.KYCRequestController) {
-	kycRoutes := router.Group("/api/kycrequest")
+	kycRoutes := router.Group("/api/kyc")
 	{
-		kycRoutes.Use(middleware.JWTMiddleware())                               // Apply the JWT middleware to protect the route
-		kycRoutes.GET("/submitted", kycRequestController.GetKYCRequestsByRange) // Correct route
+		kycRoutes.Use(middleware.JWTMiddleware())                             // Apply JWT middleware to protect the route
+		kycRoutes.GET("/request", kycRequestController.GetKYCRequestsByRange) // Update the route to /api/kyc/request
 	}
 }
